# fhe-blockchain

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Findsodium.cmake
config/: config.json
depends/: CMakeLists.txt
incl/: base64.hpp
incl/chain/: chain.hpp  chain_manager.hpp  fork.hpp  miner.hpp
incl/computer/: ast.hpp  concrete_computation_factory.hpp  fhe_computation.hpp  fhe_computer.hpp
incl/conv/: conv.hpp  conv.tcc
incl/core/: block.hpp  block_header.hpp  coinbase_transaction.hpp  merkle.hpp  transaction.hpp  transaction_input.hpp  transaction_output.hpp
incl/core/interface/: computation.hpp
incl/msg/: message.hpp
incl/net/: conn_mngr.hpp  peer.hpp  router.hpp  rpc_router.hpp  rpc_server.hpp
incl/node/: node.hpp
incl/node/interface/: i_node.hpp
incl/store/: mem_blockstore.hpp  mem_chainstate.hpp  mem_compstore.hpp  mem_pool.hpp
incl/store/interface/: i_blockstore.hpp  i_chainstate.hpp  i_compstore.hpp  i_mempool.hpp
incl/util/: util.hpp
incl/wallet/: wallet.hpp
proto/: message.proto
scripts/: client.py  comp.sh  message_pb2.py  rpc_client.py
src/: conn.cpp  decryptor.cpp  gen.cpp  gen_keys.cpp  main.cpp  oldmain.cpp
src/chain/: chain.cpp  chain_manager.cpp  fork.cpp  miner.cpp
src/computer/: ast.cpp  concrete_computation_factory.cpp  fhe_computation.cpp  fhe_computer.cpp
src/core/: block.cpp  block_header.cpp  coinbase_transaction.cpp  merkle.cpp  transaction.cpp  transaction_input.cpp  transaction_output.cpp
src/msg/: message.cpp
src/net/: conn_mngr.cpp  peer.cpp  router.cpp  rpc_router.cpp  rpc_server.cpp
src/node/: node.cpp
src/store/: mem_blockstore.cpp  mem_chainstate.cpp  mem_compstore.cpp  mem_pool.cpp
src/util/: util.cpp
src/wallet/: wallet.cpp
